--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
